--- a/GUI/build.gradle
+++ b/GUI/build.gradle
@@ -20,4 +20,5 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile files('libs/firebase-client-jvm-LATEST.jar')
 }
