--- a/GUI/src/main/AndroidManifest.xml
+++ b/GUI/src/main/AndroidManifest.xml
@@ -10,6 +10,7 @@
         >
         <uses-permission android:name="android.permission.INTERNET" />
         <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+
         <activity
             android:name="com.example.qwikserve.gui.MainActivity"
             android:label="@string/app_name" >
@@ -46,6 +47,17 @@
         <activity
             android:name="com.example.qwikserve.gui.FinalOrder"
             android:label="@string/title_activity_final_order" >
+        </activity>
+        <activity
+            android:name="com.example.qwikserve.gui.CookScreen"
+            android:label="@string/title_activity_cook_screen"
+            android:parentActivityName="com.example.qwikserve.gui.MainActivity"
+            android:screenOrientation="landscape"
+            android:configChanges="orientation|keyboardHidden"
+            >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="MainActivity" />
         </activity>
     </application>
 
